src/test/resources/inspections/general/circular/first/utils.after.v
module first

import <error descr="Circular import detected">second</error>

pub fn util(){
	second.util()
}
